--- a/index.html
+++ b/index.html
@@ -1,132 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TRIPATHI ji chai & bytes</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TRIPATHI ji chai & bytes</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-    <header>
-        <div class="navbar">
-            <div class="nav-logo border">
-                <div class="logo"></div>
-            </div>
-            <div class="navbar-address border">
-                <p class="address-first">Location</p>
-                <div class="add-icon">
-                    <i class="fa-solid fa-location-dot"></i>
-                    <p class="address-second">India</p>
-                </div>
-            </div>
-            <div class="nav-search">
-                <select class="search-select">
-                    <option>All</option>
-                </select>
-                <input placeholder="Search your meal" class="search-input">
-                <div class="search-icon">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
-            </div>
-            <div class="navsign-in border">
-                <p><span>Bind with us</span></p>
-                <p class="nav-second">About Accounts</p>
-            </div>
-            <div class="nav-return border">
-                <p><span>Your feedback</span></p>
-                <p class="nav-order">&Orders</p>
-            </div>
-            <div class="nav-cart border">
-                <i class="fa-solid fa-pizza-slice"></i>
-                <i class="fa-solid fa-champagne-glasses"></i>
-                Your Cart
-            </div>
+  <!-- Navbar -->
+  <header>
+    <div class="navbar">
+      <div class="nav-logo border">
+        <div class="logo"></div>
+      </div>
+      <div class="navbar-address border">
+        <p class="address-first">Location</p>
+        <div class="add-icon">
+          <i class="fa-solid fa-location-dot"></i>
+          <p class="address-second">India</p>
         </div>
-        <div class="panel"> 
-            <div class="panel-all"><p><i class="fa-solid fa-bars"></i> All</p></div>
-            <div class="panel-ops">
-                <p>Today's Special</p>
-                <p>Customer Service</p>
-                <p>Free coupon code</p>
-                <p>Registry</p>
-                <p>Sells</p>
-            </div>
-            <div class="panel-deals">
-                <i class="fa-solid fa-burger"></i> GET YOUR BURGERS
-            </div>
+      </div>
+      <div class="nav-search">
+        <select class="search-select">
+          <option>All</option>
+        </select>
+        <input placeholder="Search your meal" class="search-input">
+        <div class="search-icon">
+          <i class="fa-solid fa-magnifying-glass"></i>
         </div>
-    </header>
-
-    <div class="hero-section">
-        <div class="img1"></div>
-        <div class="img2"></div>
-    </div>
-    <div class="hero-msg">You are on TRIPATHI chai and bytes order all over India with instant delivery <a>Click here to explore the menu</a></div>
-    <div class="special"><h1>Tripathi's SPECIAL</h1></div>
-
-    <div class="buy-section"> 
-        <div class="box">
-            <img src="kulhad.jpg" alt="Kulhad Chai">
-            <p>Kulhad chai</p>
-            <button class="order-btn">Order Now</button>
-        </div>
-        <div class="box">
-            <img src="mattarpaneer.jpg" alt="Matter Paneer">
-            <p>Matter paneer</p>
-            <button class="order-btn">Order Now</button>
-        </div>
-        <div class="box">
-            <img src="pizza.jpg" alt="Pizza">
-            <p>Pizza</p>
-            <button class="order-btn">Order Now</button>
-        </div>
-        <div class="box">
-            <img src="hakkanoodles.jpg" alt="Hakka Noodles">
-            <p>Hakka noodles</p>
-            <button class="order-btn">Order Now</button>
-        </div>
+      </div>
+      <div class="navsign-in border">
+        <p><span>Bind with us</span></p>
+        <p class="nav-second">About Accounts</p>
+      </div>
+      <div class="nav-return border">
+        <p><span>Your feedback</span></p>
+        <p class="nav-order">&Orders</p>
+      </div>
+      <div class="nav-cart border">
+        <i class="fa-solid fa-pizza-slice"></i>
+        <i class="fa-solid fa-champagne-glasses"></i>
+        Your Cart
+      </div>
     </div>
 
-    <footer>
-        <div class="foot-panel">Back on top</div>
-        <div class="foot-panel2">
-            <ul>
-                <p>Know about us</p>
-                <a>Our Career</a>
-                <a>Blogs</a>
-                <a>Tripathi Delights</a>
-                <a>Investors</a>
-                <a>Ratings</a>
-                <a>Feedback</a>
-            </ul>
-            <ul>
-                <p>Payments</p>
-                <a>Business cards</a>
-                <a>UPI</a>
-                <a>Cash on delivery</a>
-            </ul>
-            <ul>
-                <p>Quality</p>
-                <a>Specialised Chefs</a>
-                <a>Proper Hygiene</a>
-                <a>Sanitised</a>
-                <a>100% refund and free food on wrong delivery</a>
-            </ul>
-        </div>
-        <div class="foot-panel3">
-            <div class="logo"></div>
-        </div>
-        <div class="foot-panel4">
-            <div class="pages">
-                <a>Conditions</a>
-                <a>Privacy</a>
-                <a>Your ads privacy choices</a>
-            </div>
-            <div class="copyright">
-                2004-2025, Tripathi chai and bytes, Inc or its affiliates
-            </div>
-        </div>
-    </footer>
+    <div class="panel"> 
+      <div class="panel-all"><p><i class="fa-solid fa-bars"></i> All</p></div>
+      <div class="panel-ops">
+        <p>Today's Special</p>
+        <p>Customer Service</p>
+        <p>Free coupon code</p>
+        <p>Registry</p>
+        <p>Sells</p>
+      </div>
+      <div class="panel-deals">
+        <i class="fa-solid fa-burger"></i>
+        GET YOUR BURGERS
+      </div>
+    </div>
+  </header>
+
+  <!-- Hero Section -->
+  <div class="hero-section">
+    <div class="img1"></div>
+    <div class="img2"></div>
+  </div>
+  <div class="hero-msg">
+    You are on <b>TRIPATHI chai & bytes</b> - order all over India with instant delivery
+    <a href="#">Click here to explore the menu</a>
+  </div>
+
+  <!-- Special Section -->
+  <div class="special"><h1>Tripathi's SPECIAL</h1></div>
+
+  <!-- Product Boxes -->
+  <div class="shop-section">
+    <div class="box">
+      <div class="food-img" style="background-image: url('kulhad.jpg');"></div>
+      <p class="order-btn">Order Now</p>
+    </div>
+    <div class="box">
+      <div class="food-img" style="background-image: url('mattarpaneer.jpg');"></div>
+      <p class="order-btn">Order Now</p>
+    </div>
+    <div class="box">
+      <div class="food-img" style="background-image: url('pizza.jpg');"></div>
+      <p class="order-btn">Order Now</p>
+    </div>
+    <div class="box">
+      <div class="food-img" style="background-image: url('hakkanoodles.jpg');"></div>
+      <p class="order-btn">Order Now</p>
+    </div>
+  </div>
+
+  <div class="item-name">
+    <p class="item-1">Kulhad chai</p>
+    <p class="item-2">Matar Paneer</p>
+    <p class="item-3">Pizza</p>
+    <p class="item-4">Hakka Noodles</p>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <div class="foot-panel">Back on top</div>
+    <div class="foot-panel2">
+      <ul>
+        <p>Know about us</p>
+        <a>Our Career</a>
+        <a>Blogs</a>
+        <a>Tripathi Delights</a>
+        <a>Investors</a>
+        <a>Ratings</a>
+        <a>Feedback</a>
+      </ul>
+      <ul>
+        <p>Payments</p>
+        <a>Business cards</a>
+        <a>UPI</a>
+        <a>Cash on delivery</a>
+      </ul>
+      <ul>
+        <p>Quality</p>
+        <a>Specialised Chefs</a>
+        <a>Proper Hygiene</a>
+        <a>Sanitised</a>
+        <a>100% refund on wrong delivery</a>
+      </ul>
+    </div>
+
+    <div class="foot-panel3">
+      <div class="footer-logo"></div>
+    </div>
+    <div class="foot-panel4">
+      <div class="pages">
+        <a>Conditions</a>
+        <a>Privacy</a>
+        <a>Your ads privacy choices</a>
+      </div>
+      <div class="socials">
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-x-twitter"></i>
+        <i class="fa-brands fa-youtube"></i>
+      </div>
+      <div class="copyright">
+        2004-2025, Tripathi chai & bytes, Inc or its affiliates
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
+
